# mediahub

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  SECURITY.md  docker-compose.yml  findings.md  progress.md  readme.md  task_plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml
crates/mediahub-adapter-image/: Cargo.toml
crates/mediahub-adapter-image/src/: image_runtime.rs  image_rust.rs  image_tests.rs  image_vips.rs  lib.rs
crates/mediahub-adapter-local/: Cargo.toml
crates/mediahub-adapter-local/src/: lib.rs  tests.rs
crates/mediahub-adapter-postgres/: Cargo.toml
crates/mediahub-adapter-postgres/migrations/: 0001_repository_profile.sql  0002_control_plane.sql  0003_control_plane_runtime.sql  0004_remove_avif_variants.sql  0005_system_settings.sql  0006_s3_multipart.sql  0007_tenant_integrity_and_application_retention.sql  0008_upload_session_cleanup.sql  0009_idempotency_claim_fencing.sql  0010_ordinary_upload_fencing.sql
crates/mediahub-adapter-postgres/src/: administration.rs  async_job.rs  codec.rs  control_access_keys.rs  control_applications.rs  control_auth.rs  control_helpers.rs  control_plane.rs  data_plane.rs  idempotency.rs  lib.rs  media.rs  media_buckets.rs  media_mutations.rs  media_queries.rs  media_support.rs  multipart_helpers.rs  multipart_lifecycle.rs  outbox.rs  s3_multipart.rs  upload_session.rs  variant.rs  webhook.rs
crates/mediahub-adapter-postgres/tests/: repository_contract.rs
crates/mediahub-adapter-s3/: Cargo.toml
crates/mediahub-adapter-s3/src/: lib.rs  tests.rs
crates/mediahub-adapter-s3/tests/: object_store_contract.rs
crates/mediahub-app/: Cargo.toml
crates/mediahub-app/src/: administration.rs  async_job.rs  control_plane.rs  data_plane.rs  error.rs  image.rs  lib.rs  memory.rs  memory_bucket.rs  memory_media.rs  memory_object_store.rs  memory_outbox.rs  memory_upload.rs  object_store_contract.rs  ports.rs  s3_multipart.rs  upload.rs  upload_session.rs  variant.rs  webhook.rs
crates/mediahub-core/: Cargo.toml
crates/mediahub-core/src/: async_job.rs  async_job_error.rs  async_job_identity.rs  async_job_item.rs  async_job_model.rs  async_job_tests.rs  bucket.rs  error.rs  ids.rs  lib.rs  media.rs  metadata.rs  upload_session.rs  variant.rs  visibility.rs
crates/mediahub-openapi/: Cargo.toml
crates/mediahub-openapi/src/: contract.rs  contract_components.rs  contract_model.rs  contract_parameters.rs  contract_paths.rs  dto.rs  lib.rs  main.rs
crates/mediahub-server/: Cargo.toml
crates/mediahub-server/src/: access_key.rs  access_keys.rs  api_error.rs  api_requests.rs  api_responses.rs  api_types.rs  api_validation.rs  bootstrap.rs  email.rs  handlers_admin.rs  handlers_admin_auth.rs  handlers_applications.rs  handlers_auth.rs  handlers_buckets.rs  handlers_health.rs  handlers_jobs.rs  handlers_media.rs  handlers_media_list.rs  handlers_path.rs  handlers_path_ops.rs  handlers_upload.rs  handlers_webhooks.rs  http.rs  identity.rs  lib.rs  main.rs  media_http.rs  media_read_auth.rs  path_http.rs  runtime_storage.rs  s3_gateway.rs  s3_http.rs  s3_http_core.rs  s3_http_multipart.rs  s3_http_support.rs  s3_list.rs  s3_multipart_storage.rs  s3_xml.rs  security.rs  server_config.rs  (+8 more)
docs/: runbook.md  sub2api-async-image-storage.md
openapi/: openapi.json
scripts/: verify-hmac-upload.ps1
web/: .gitignore  index.html  nginx.local.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
web/scripts/: generate-openapi-client.mjs  verify-openapi.mjs  verify-viewer-chunks.mjs
web/src/: App.test.tsx  App.tsx  App.variant-preview.test.tsx  index.css  libarchive-js.d.ts  main.tsx  sevenzip-wasm.d.ts  upload-hash.test.ts  upload-hash.ts  upload-scheduler.test.ts  upload-scheduler.ts
web/src/api/: client.test.ts  client.ts  generated.ts  index.test.ts  index.ts
web/src/components/: ApplicationSwitcher.test.tsx  ApplicationSwitcher.tsx  ObjectFileViewer.test.tsx  ObjectFileViewer.tsx  SelectControl.test.tsx  SelectControl.tsx
web/src/components/viewer-plugins/: ArchiveFolderZip.test.ts  ArchiveFolderZip.ts  ArchivePreviewPlugin.test.tsx  ArchivePreviewPlugin.tsx  ArchivePreviewPolicy.test.ts  ArchivePreviewPolicy.ts  ArchiveTree.test.ts  ArchiveTree.ts  ArchiveWasmLocator.test.ts  ArchiveWasmLocator.ts  BufferedPreviewDownload.test.ts  BufferedPreviewDownload.ts  BufferedPreviewPolicy.ts  OpenFileViewerArchivePlugin.tsx  OpenFileViewerSpreadsheetPlugin.test.ts  OpenFileViewerSpreadsheetPlugin.tsx  OpenFileViewerSqlitePlugin.test.ts  OpenFileViewerSqlitePlugin.tsx  SevenZipArchive.test.ts  SevenZipArchive.ts  SpreadsheetPreviewPlugin.test.tsx  SpreadsheetPreviewPlugin.tsx  SqlitePreviewPlugin.test.tsx  SqlitePreviewPlugin.tsx  SqliteReadonlySql.test.ts  SqliteReadonlySql.ts  SqliteWorkerClient.test.ts  SqliteWorkerClient.ts  ViewerObjectUrl.test.tsx  ViewerObjectUrl.ts  ViewerShared.test.ts  ViewerShared.tsx  archive-protocol.test.ts  archive-protocol.ts  archive.worker.ts  spreadsheet-protocol.test.ts  spreadsheet-protocol.ts  spreadsheet.worker.test.ts  spreadsheet.worker.ts  sqlite-protocol.ts  (+1 more)
