[workspace]
resolver = "3"
members = [
    "crates/mediahub-core",
    "crates/mediahub-app",
    "crates/mediahub-adapter-local",
    "crates/mediahub-adapter-image",
    "crates/mediahub-adapter-postgres",
    "crates/mediahub-adapter-s3",
    "crates/mediahub-openapi",
    "crates/mediahub-server",
]
default-members = ["crates/mediahub-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.98"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["json", "macros", "multipart"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
dav-server = { version = "0.11.0", default-features = false }
futures-util = "0.3.31"
hex = "0.4.3"
fs2 = "0.4.3"
hmac = "0.12.1"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "webp"] }
http = "1.3.1"
mime = "0.3.17"
mime_guess = "2.0.5"
object_store = { version = "0.14.0", default-features = false, features = ["aws"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.9.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "macros"] }
subtle = "2.6.1"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
utoipa = { version = "5.4.0", features = ["preserve_order"] }
webp = { version = "0.3.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
