[workspace]
resolver = "3"
members = [
    "crates/mediahub-core",
    "crates/mediahub-app",
    "crates/mediahub-adapter-local",
    "crates/mediahub-adapter-image",
    "crates/mediahub-adapter-postgres",
    "crates/mediahub-adapter-s3",
    "crates/mediahub-openapi",
    "crates/mediahub-server",
]
default-members = ["crates/mediahub-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.104"
aes-gcm = "0.11.0"
argon2 = "0.5.3"
async-trait = "0.1.91"
axum = { version = "0.8.9", features = ["json", "macros", "multipart"] }
base64 = "0.22.1"
bytes = "1.12.1"
chrono = { version = "0.4.45", features = ["serde"] }
dav-server = { version = "0.11.0", default-features = false }
futures-util = "0.3.33"
futures-timer = "3.0.3"
hex = "0.4.3"
fs2 = "0.4.3"
hmac = "0.13.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
http = "1.4.2"
mime = "0.3.17"
mime_guess = "2.0.5"
object_store = { version = "0.14.1", default-features = false, features = ["aws"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "macros"] }
subtle = "2.6.1"
thiserror = "2.0.19"
time = { version = "0.3.53", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.53.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = "2.5.8"
uuid = { version = "1.24.0", features = ["serde", "v4"] }
utoipa = { version = "5.5.0", features = ["preserve_order"] }
webp = { version = "0.3.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
