[package]
name = "mediahub-adapter-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
hex.workspace = true
mediahub-app = { path = "../mediahub-app" }
mediahub-core = { path = "../mediahub-core" }
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
mediahub-app = { path = "../mediahub-app", features = ["object-store-contract-tests"] }

[lints]
workspace = true
