[package]
name = "mediahub-adapter-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S3-compatible object storage adapter for MediaHub"

[dependencies]
async-trait.workspace = true
aws-credential-types = "=1.2.8"
aws-sigv4 = { version = "=1.3.6", default-features = false, features = ["http1", "sign-http"] }
futures-util = "0.3"
hex.workspace = true
http.workspace = true
mediahub-app = { path = "../mediahub-app" }
mediahub-core = { path = "../mediahub-core" }
object_store.workspace = true
sha2.workspace = true

[dev-dependencies]
mediahub-app = { path = "../mediahub-app", features = ["object-store-contract-tests"] }
object_store = { workspace = true, features = ["aws"] }
reqwest.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
