[package]
name = "mediahub-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime-independent application services and ports for MediaHub"

[features]
object-store-contract-tests = []

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
mediahub-core = { path = "../mediahub-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
futures = "0.3.33"

[lints]
workspace = true
