[package]
name = "mediahub-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Runtime-independent domain model for MediaHub"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v7"] }
