[package]
name = "mediahub-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
docker-libvips = ["mediahub-adapter-image/libvips"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
axum.workspace = true
aws-credential-types = "=1.2.8"
aws-sigv4 = { version = "=1.3.6", default-features = false, features = ["http1", "sign-http"] }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
dav-server.workspace = true
futures-util.workspace = true
hex.workspace = true
fs2.workspace = true
hmac.workspace = true
http.workspace = true
mediahub-adapter-local = { path = "../mediahub-adapter-local" }
mediahub-adapter-image = { path = "../mediahub-adapter-image" }
mediahub-adapter-postgres = { path = "../mediahub-adapter-postgres" }
mediahub-adapter-s3 = { path = "../mediahub-adapter-s3" }
mediahub-app = { path = "../mediahub-app" }
mediahub-core = { path = "../mediahub-core" }
mime.workspace = true
mime_guess.workspace = true
md-5 = "0.10.6"
password-hash.workspace = true
rand.workspace = true
quick-xml = "0.40.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
object_store.workspace = true

[lints]
workspace = true
